--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Human-alien encounters -- Fiction'
 - !lcc 'PS'
 - !lcsh 'Science fiction'
+- GITenberg
 title: The Anglers of Arz
 url: http://www.gutenberg.org/ebooks/32665
